--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,15 +96,6 @@ Search Screen
   z-index: -1;
   top: 0;
 }
-#bg-static {
-  background-image: url("../images/02-IMG_9158.jpg");
-  -webkit-filter: blur(10px);
-  -moz-filter: blur(10px);
-  filter: blur(10px);
-}
-#bg-solid {
-  background-color: #000000;
-}
 body.cases .officer-tab {
   display: none;
 }
@@ -131,13 +122,17 @@ Filters
   width: 70%;
   float: left;
 }
-.results-wrapper-inner {
+.results-wrapper-inner,
+.detail-wrapper,
+.search-statement-wrapper {
   background-color: rgba(0, 0, 0, 0.7);
   border: 1px solid #000;
   padding: 20px;
   margin-bottom: 1px;
 }
-.results-wrapper-inner label {
+.results-wrapper-inner label,
+.detail-wrapper label,
+.search-statement-wrapper label {
   color: #ffffff;
 }
 #search-intro,
@@ -1060,13 +1055,27 @@ iframe {
   -moz-transition: opacity 0.5s ease-in-out;
   -webkit-transition: opacity 0.5s ease-in-out;
 }
-body.iframed {
+body.nested {
   background-color: transparent;
 }
-.iframed #cpd-header {
+body.nested #cpd-header {
   display: none;
 }
-.iframed #bg-static,
-.iframed #bg-solid {
+body.not-nested {
+  background-color: #000;
+}
+#bg-static,
+#bg-solid {
   display: none;
+}
+.not-nested #bg-static {
+  background-image: url("../images/02-IMG_9158.jpg");
+  -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  filter: blur(10px);
+  display: block;
+}
+.not-nested #bg-solid {
+  background-color: #000000;
+  display: block;
 }
