--- a/templates/case.html
+++ b/templates/case.html
@@ -1,5 +1,7 @@
 {% extends "templates/_base.html" %}
 
+{% block bodyattrs %}class="not-nested"{% endblock bodyattrs %}
+
 {% block content %}
   <div id="bg-static" class="bgimg"></div>
   <div class="container cpd-container">
