use the new cases sheet, update the cases model, add cases and officers json functions as template funcs

--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
   var site_path = '{{ site_path }}';
-  var cases_json = {{ cases_json|safe }};
-  var officers_json = {{ officers_json|safe }};
+  var cases_json = {{ cases_json()|safe }};
+  var officers_json = {{ officers_json()|safe }};
 </script>
 
 {{ JS.push('vendor/chosen/chosen.jquery.js') }}
