--- a/less/style.less
+++ b/less/style.less
@@ -476,6 +476,12 @@ Results
     display:flex;
   }
 
+  .no-description {
+    visibility: hidden;
+    max-height: 0;
+    margin: 0;
+  }
+
   .case-payment-wrapper {
     min-width:200px;
     padding:20px;
@@ -761,7 +767,7 @@ a:hover {
 }
 
 /* ==========================================================================
-Results
+Intro Page
 ========================================================================== */
 #home {
   background-color: rgba(0,0,0,1);
@@ -807,8 +813,6 @@ Results
     font-weight: 300;
     color:#fff;
   }
-
-  
 
   h1 {
     font-weight: bold;
