--- a/less/style.less
+++ b/less/style.less
@@ -474,6 +474,7 @@ Results
 
   .card-row {
     display:flex;
+    min-width:100%;
   }
 
   .no-description {
@@ -509,6 +510,7 @@ Results
   .case-description {
     padding:20px;
     color:lighten(@cr-darkest,20%);
+    flex: 1; 
 
     h4 {      
       font-family:@cr-condensed;
