--- a/templates/_case.html
+++ b/templates/_case.html
@@ -10,7 +10,7 @@
 
   <div class="case-description">   
 
-     <p>In facilisis scelerisque dui vel dignissim. Sed nunc orci, ultricies congue vehicula quis, facilisis a orci. In aliquet facilisis condimentum. Donec at orci orci, a dictum justo.  Donec at orci orci, a dictum justo.</p>
+     <p>{{ case.narrative }}</p>
 
      <ul class="case-details">
        <li>Case number: {{ case.case_number }}</li>
