--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -418,7 +418,7 @@ Results
   min-width: 100%;
 }
 .case .read-more {
-  color: #bd261d;
+  color: #3d9999;
 }
 .case .read-more:hover {
   cursor: pointer;
@@ -426,8 +426,10 @@ Results
 }
 .case .case-payment-wrapper {
   min-width: 200px;
+  max-width: 200px;
   padding: 20px;
   background-color: #000000;
+  position: relative;
   text-align: center;
   display: flex;
   align-items: center;
@@ -442,15 +444,22 @@ Results
   font-family: 'Open Sans Condensed', sans-serif;
   margin-top: 0;
 }
+.case .case-payment-wrapper h4 {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: .9em;
+  font-weight: normal;
+  margin: 0;
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
 .case .case-description {
   padding: 20px;
   color: #333333;
   flex: 1;
 }
-.case .case-description h4 {
-  font-family: 'Open Sans Condensed', sans-serif;
-  margin-top: 0;
-  color: #000000;
+.case .case-summary {
+  margin-top: 20px;
 }
 .case .case-details {
   list-style-type: none;
@@ -463,7 +472,7 @@ Results
 }
 .case .case-details li {
   display: inline-block;
-  margin: 20px 0 0 0;
+  margin: 0;
 }
 .case .case-details li span {
   display: block;
@@ -481,23 +490,29 @@ Results
 }
 .case .case-officers {
   width: 100%;
-  padding: 20px;
-  background-color: #3d9999;
+  margin-top: 20px;
   color: #000000;
-  border-top: 1px solid #000000;
-  display: flex;
 }
 .case .case-officers .card-label {
   width: 70px;
   margin-right: 0px;
 }
+.case .case-officers .officer-group {
+  display: flex;
+  flex-wrap: wrap;
+}
 .case .case-officers .police-icon {
   display: inline-block;
   width: 30px;
   height: 30px;
-  margin-bottom: -2px;
+  margin: 4px 4px 0 0;
   background: url("../images/police-icon.svg") center center no-repeat;
-  background-size: contain;
+  background-size: 30px 30px;
+  background-color: #000000;
+  padding: 20px;
+}
+.case .case-officers .police-icon:hover {
+  background-color: #bd261d;
 }
 .case h2 {
   margin-top: 0;
