--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -18,6 +18,7 @@
 
       <div class="card-row">
         <div class="case-payment-wrapper">
+          <h4><%= model.case_number %></h4>
           <div class="case-payment">
             <h2>$<%= Number(model.total_payments).formatMoney(0) %></h2>
             <h3><%= model.primary_cause %></h3>
@@ -25,35 +26,41 @@
         </div>
 
         <div class="case-description">
-          <h4>Case <%= model.case_number %></h4>
+          <ul class="case-details">
+            <li>
+              <span class="card-label">Plaintiff: </span>
+              <% _.each(model.victims, function(victim) { %>
+              <%= victim.victim_1 %>
+              <% }) %>
+            </li>
+            <li><span class="card-label">Incident date: </span><% if (model.date_of_incident !== '') { %><%= model.date_of_incident %><% } else { %>Not specified<% } %></li>
+            <li><span class="card-label">Location: </span><% if (model.address !== '') { %><%= model.address %><% } else { %>Not specified<% } %></li>
+          </ul>
 
           <% if (model.narrative !== 'NULL') { %>
+          <div class="case-summary">
+            <span class="card-label">Case summary: </span>
             <p><%= this.formatStr(model.narrative) %></p>
+          </div>
           <%  } %>
 
-           <ul class="case-details">
-             <li>
-               <span class="card-label">Plaintiff: </span>
-               <% _.each(model.victims, function(victim) { %>
-                <%= victim.victim_1 %>
-               <% }) %>
-             </li>
-             <li><span class="card-label">Incident date: </span><%= model.date_of_incident %></li>
-             <li><span class="card-label">Location: </span><% if (model.address !== '') { %><%= model.address %><% } else { %>Not specified<% } %></li>
-           </ul>
+          <% if ( model.officers.length > 0){ %>
+          <div class="case-officers">
+            <span class="card-label">Officers involved:</span>
+            <div class="officer-group">
+              <% _.each(model.officers, function(officer) { %>
+              <a href="<%= site_path %>officer/<%= officer.slug %>" class="police-icon" data-firstname="<%= officer.first %>" data-lastname="<%= officer.last %>"></a>
+             <% }) %>
+             </div>
+          </div>
+          <% } %>
+
+          
+           
         </div>
       </div>
 
-      <% if ( model.officers.length > 0){ %>
-      <div class="case-officers">
-        <span class="card-label">Officers involved:</span>
-        <div class="officer-group">
-          <% _.each(model.officers, function(officer) { %>
-          <a href="<%= site_path %>officer/<%= officer.slug %>" class="police-icon" data-firstname="<%= officer.first %>" data-lastname="<%= officer.last %>"></a>
-         <% }) %>
-         </div>
-      </div>
-      <% } %>
+      
 
     </div>
 
