--- a/templates/case.html
+++ b/templates/case.html
@@ -1,6 +1,6 @@
 {% extends "templates/_base.html" %}
 
-{% block bodyattrs %}class="not-nested"{% endblock bodyattrs %}
+{% block bodyattrs %}class="not-nested detail-page"{% endblock bodyattrs %}
 
 {% block content %}
   <div id="bg-static" class="bgimg"></div>
