functional dropdown filters for case search

--- a/templates/_case_search_form.html
+++ b/templates/_case_search_form.html
@@ -61,10 +61,10 @@
         <label>Payment amount</label>
         <select name="total_payments" class="payment chosen">
           <option value="">Any</option>
-          <option value="0">$0-$3000</option>
-          <option value="3000">$3000-$12000</option>
-          <option value="12000">$12000-$80000</option>
-          <option value="80000">$80000+</option>
+          <option value="0-3000">$0-$3,000</option>
+          <option value="3000-12000">$3,000-$12,000</option>
+          <option value="12000-80000">$12,000-$80,000</option>
+          <option value="80000-999999999999999">$80,000+</option>
         </select>
       </div>
 
